# talaka-bot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
talaka_bot/: database.py  main.py  models.py
