[tool.poetry]
name = "talaka-bot"
version = "0.1.0"
description = ""
authors = ["Dzmitry Izaitka <dem214overlord@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.4.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
